--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
  - sudo apt-get install -qq autotools-dev
  - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie main"
  - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie-backports main"
+ - sudo apt-get update -qq
  - sudo apt-get install -qq -t jessie-backports libresiprocate-dev
 compiler:
  - gcc
