--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
  - sudo apt-get install -qq autotools-dev
  - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie main"
  - sudo apt-get update -qq
- - sudo apt-get dist-upgrade -qq --force-yes -o Dpkg::Options::="--force-overwrite"
+ - sudo apt-get dist-upgrade -qq --force-yes -o Dpkg::Options::="--force-overwrite" -o Dpkg::Options::="--force-confnew"
  - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie-backports main"
  - sudo apt-get update -qq
  - sudo apt-get install -qq --force-yes -t jessie-backports libresiprocate-1.10-dev
