--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: cpp
 before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq autotools-dev
- - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie main"
+ - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ xenial main universe"
  - sudo apt-get update -qq
  - sudo apt-get dist-upgrade -qq --force-yes -o Dpkg::Options::="--force-overwrite" -o Dpkg::Options::="--force-confnew"
+ - sudo apt-get install -qq autotools-dev
+ - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie main"
  - sudo add-apt-repository -y "deb http://http.us.debian.org/debian/ jessie-backports main"
  - sudo apt-get update -qq
  - sudo apt-get install -qq --force-yes -t jessie-backports libresiprocate-1.10-dev
